finished mercular case study

--- a/ourdate.html
+++ b/ourdate.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Ourdate | Pu Thavikulwat</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
 
     <!-- & Put this in every page to use scrolling animation -->
     <script defer src="layout.js"></script>
@@ -31,7 +30,7 @@
     <div id="nav-placeholder"></div>
     <!-- & Put this in every page to populate navbar -->
 
-    <img src="img/ourdate_poster_big.png" class="hide-long header-img" alt="Ourdate cover photo">
+    <img src="img/ourdate/ourdate_poster_big.png" class="hide-long header-img" alt="Ourdate cover photo">
 
     <section class="content-container">
       <div class="project-info">
@@ -96,23 +95,23 @@
           <ol>
             <li>Profile Page Redesign
               <ul>
-                <li><span class="bold">Goal:</span> To encourage Ourdate users to meet each other in-person before chatting.</li>
+                <li><b>Goal:</b> To encourage Ourdate users to meet each other in-person before chatting.</li>
               </ul>
             </li>
             <li>Ourdate Hangout Feature
               <ul>
-                <li><span class="bold">Goal:</span> To make public meetups a less anxious experience.</li>
+                <li><b>Goal:</b> To make public meetups a less anxious experience.</li>
               </ul>
             </li>
             <li>Ourdate GuruFox Feature
               <ul>
-                <li><span class="bold">Goal:</span> To simplify the process of planning dates.</li>
+                <li><b>Goal:</b> To simplify the process of planning dates.</li>
               </ul>
             </li>
           </ol>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <section class="content-container-v2 blue-background">
       <span class="feature-text">Feature 1</span>
       <h2>Ourdate Dating Profile Redesign</h2>
@@ -120,9 +119,9 @@
       <h3 class="hide">I worked alongside two other designers to redesign the profile page of Ourdate app.</h3>
       <h3>&nbsp;</h3>
       <h3 class="bold hide">The Problem:</h3>
-      <h3 class="hide">The original profile page design <span class="bold">fails</span> to communicate our app goal of encouraging users to meet each other in-person.</h3>
-      <img src="img/old_profile.png" class="hide-long" id="old-profile" alt="Image of the old profile design">
-      <h3 class="hide">Based on multiple testing sessions we conducted with Ourdate users, the original profile <span class="bold">doesn’t show enough ‘personality’</span> of that a person despite having lots of information about them.</h3>
+      <h3 class="hide">The original profile page design <b>fails</b> to communicate our app goal of encouraging users to meet each other in-person.</h3>
+      <img src="img/ourdate/old_profile.png" class="hide-long" id="old-profile" alt="The old profile design">
+      <h3 class="hide">Based on multiple testing sessions we conducted with Ourdate users, the original profile <b>doesn’t show enough ‘personality’</b> of that a person despite having lots of information about them.</h3>
       <h3>&nbsp;</h3>
       <h3 class="hide">We spent a lot of time researching and brainstorming on ways to bring life out of the profile page. Through conducting interviews, it became evident that showcasing images or videos of users doing their favorite activities is an effective and natural way to show their personality.</h3>
       <h3>&nbsp;</h3>
@@ -130,14 +129,14 @@
       <h3>&nbsp;</h3>
       <h3 class="bold">Final Profile Redesign:</h3>
       <h3>&nbsp;</h3>
-      <img src="img/new_profile.png" class="hide-long" id="new-profile" alt="Image of the new profile design">
+      <img src="img/ourdate/new_profile.png" class="hide-long" id="new-profile" alt="The new profile design">
     </section>
 
     <section class="content-container-v2">
       <span class="feature-text">Feature 2</span>
       <h2>Ourdate Dating Hangout Feature</h2>
       <h3>&nbsp;</h3>
-      <h3 class="hide">Ourdate Hangout is a feature I brainstormed as a <span class="bold">solution to the Pen Pal Syndrome</span>, which is a common problem for many dating app users.</h3>
+      <h3 class="hide">Ourdate Hangout is a feature I brainstormed as a <b>solution to the Pen Pal Syndrome</b>, which is a common problem for many dating app users.</h3>
       <h3>&nbsp;</h3>
       <h3 class="hide">According to user research, most participants think the idea of going to public events to do activities together is a great way to connect with other singles. However, many feel anxious to go to big public events alone.</h3>
       <h3>&nbsp;</h3>
@@ -145,10 +144,10 @@
       <h3>&nbsp;</h3>
       <div class="video-container">
         <video class="hide" autoplay controls>
-          <source src="video/OD_hangout.mp4" source="video/mp4">
+          <source src="video/ourdate/OD_hangout.mp4" source="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <h3 class="hide-long">Users can match and meet up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <span class="bold">attend public dating events together.</span></h3>
+        <h3 class="hide-long">Users can match and meet up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <b>attend public dating events together.</b></h3>
       </div>
     </section>
 
@@ -162,7 +161,7 @@
       <h3>&nbsp;</h3>
       <div class="video-container">
         <video class="hide" autoplay controls>
-          <source src="video/guru_fox.mp4" source="video/mp4">
+          <source src="video/ourdate/guru_fox.mp4" source="video/mp4">
           Your browser does not support the video tag.
         </video>
         <h3 class="hide-long">GuruFox takes into account the profile information from both the user and their date, combined with the user's specified input, to curate a personalized date plan that they will both like.</h3>
@@ -184,7 +183,7 @@
       </div>
       <div class="two-column section">
         <div class="title">
-          <h2>Outcome</h2>
+          <h2>Results</h2>
         </div>
         <div class="desc hide">
           <h3>Although the features I designed weren’t fully implemented during my internship, the feedback received during the usability tests was positive:</h3>
