--- a/index.html
+++ b/index.html
@@ -50,52 +50,53 @@
 
       <a href="/ourdate.html" class="card-container hide">
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
-        <h4 class="ux-tag">UX Design</h4>
+        <h4 class="ux-tag">UX/UI Design</h4>
         <div class="description-container" id="ourdate-description">
           <h5 class="bold">Ourdate</h5>
           <p>A new dating app that introduces a more natural and authentic way of dating • 2023</p>
         </div>
       </a>
 
-      <div class="card-container hide">
+      <a href="#" class="card-container hide">
         <img src="img/mindfulmates_poster.png" alt="MindfulMates Case Study" class="image-poster">
         <h4 class="product-tag">Product Design</h4>
         <div class="description-container" id="mindfulmates-description">
           <h5 class="bold">MindfulMates</h5>
           <p>A pair of little robots that enhances communication between couples • 2022</p>
         </div>
-      </div>
+      </a>
 
 
-      <div class="card-container hide">
+      <a href="/mercular.html" class="card-container hide">
         <img src="img/mercular_poster.png" alt="Mercular Case Study" class="image-poster">
         <h4 class="ux-tag">UX Design</h4>
         <div class="description-container" id="mercular-description">
           <h5 class="bold">Mercular Wishlist</h5>
           <p>A feature that provides meaningful and engaging way for users to save their product • 2022</p>
         </div>
-      </div>
+      </a>
+
     </section>
 
     <section class="case-studies">
-      <h2 class="case-studies-title bold hide">Coding</h2>
-      <div class="card-container hide">
+      <h2 class="case-studies-title bold hide">Coding Projects</h2>
+      <a href="#" class="card-container hide">
         <img src="img/beatbuddy_poster2.png" alt="BEatBuddy Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="beatbuddy-description">
           <h5 class="bold">BeatBuddy</h5>
           <p>A website that crafts you personalized playlists based on your music taste • 2023</p>
         </div>
-      </div>
+      </a>
 
-      <div class="card-container hide">
+      <a href="#" class="card-container hide">
         <img src="img/markthai_poster.png" alt="Mark Thai Food Box Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="markthai-description">
           <h5 class="bold">Mark Thai Food Box</h5>
           <p>An e-commerce site for a Thai restaurant in Seattle, WA • 2022</p>
         </div>
-      </div>
+      </a>
     </section>
 
     <footer>
