updated mercular case study

--- a/mercular.html
+++ b/mercular.html
@@ -74,15 +74,30 @@
           <h2>Problem Statement</h2>
         </div>
         <div class="desc hide">
-          <h3>Mercular users don’t have an effective way of saving an item for later viewing on the website. Although adding an item to cart is an alternative, it is not possible if the product is out of stock or currently unavailable. This has negatively affected the customer retention rate on the website. </h3>
+          <h3>Mercular users don’t have an effective way of saving an item for later viewing on the website. Although adding an item to cart is an alternative, it is not possible if the product is out of stock or currently unavailable. This has negatively affected the <b>customer retention rate</b> of the website. </h3>
         </div>
       </div>
       <div class="two-column section">
         <div class="title">
           <h2>Competitive Analysis</h2>
+          <!-- <div class="grid-logo">
+            <img src="img/mercular/aliexpress_logo.png" alt="Alixexpress logo">
+            <img src="img/mercular/jib_logo_2.png" alt="JIB logo">
+            <img src="img/mercular/bananait_logo.png" alt="Banana IT logo">
+            <img src="img/mercular/powerbuy_logo.png" alt="PowerBuy logo">
+          </div> -->
+          <div class="logo-container">
+            <div class="flex-logo">
+              <img src="img/mercular/aliexpress_logo.png" alt="Alixexpress logo">
+              <img src="img/mercular/jib_logo_2.png" alt="JIB logo">
+              <img src="img/mercular/bananait_logo.png" alt="Banana IT logo">
+              <img src="img/mercular/powerbuy_logo.png" alt="PowerBuy logo">
+            </div>
+          </div>
+
         </div>
         <div class="desc hide">
-          <h3>I conducted a competitive analysis of several competing e-commerce platforms and documented the functionalities that could be beneficial for online shoppers:‍</h3>
+          <h3>I conducted a competitive analysis of several competing e-commerce platforms and documented the functionalities that could be beneficial for Mercular users:‍</h3>
             <ul>
               <li>Integrating the <b>Wishlist/Favorites</b> icon on the navigation bar allows for users to easily access the Wishlist page.</li>
               <li>An option for users to <b>“subscribe”</b> to a product and be notified if a product is running low on stock.</li>
@@ -199,21 +214,27 @@
       <h2>Final Wireframe</h2>
       <h3>&nbsp;</h3>
       <h3 class="hide">Adding product to Wishlist:</h3>
+      <h3>&nbsp;</h3>
       <img src="video/mercular/mercular_add_wishlist.gif" class="hide" alt="Adding to wishlist">
       <h3>&nbsp;</h3>
       <h3 class="hide">Navigating to Wishlist:</h3>
+      <h3>&nbsp;</h3>
       <img src="img/mercular/navigating_wishlist.png" class="hide" alt="Navigating to wishlist">
       <h3>&nbsp;</h3>
       <h3 class="hide">Subscribing to all products in Wishlist:</h3>
+      <h3>&nbsp;</h3>
       <img src="video/mercular/subscribe_all.gif" class="hide" alt="Subscribing to all products">
       <h3>&nbsp;</h3>
       <h3 class="hide">Subscribing to a single product in Wishlist:</h3>
+      <h3>&nbsp;</h3>
       <img src="video/mercular/subscribe_single.gif" class="hide" alt="Subscribing to a single product">
       <h3>&nbsp;</h3>
       <h3 class="hide">Adding product to cart:</h3>
+      <h3>&nbsp;</h3>
       <img src="video/mercular/adding_to_cart.gif" class="hide" alt="Adding product to cart">
       <h3>&nbsp;</h3>
       <h3 class="hide" >Removing products from Wishlist:</h3>
+      <h3>&nbsp;</h3>
       <img src="video/mercular/remove_from_wishlist.gif" class="hide" alt="Removing product from wishlist">
     </section>
     <h3>&nbsp;</h3>
