finished mindfulmates case study

--- a/mercular.html
+++ b/mercular.html
@@ -30,7 +30,7 @@
     <div id="nav-placeholder"></div>
     <!-- & Put this in every page to populate navbar -->
 
-    <img src="img/mercular/mercular_poster_big.png" class="hide-long header-img" alt="Ourdate cover photo">
+    <img src="img/mercular/mercular_poster_big.png" class="hide-long header-img" alt="Mercular cover photo">
 
     <section class="content-container">
       <div class="project-info">
@@ -88,10 +88,18 @@
           </div> -->
           <div class="logo-container">
             <div class="flex-logo">
-              <img src="img/mercular/aliexpress_logo.png" alt="Alixexpress logo">
-              <img src="img/mercular/jib_logo_2.png" alt="JIB logo">
-              <img src="img/mercular/bananait_logo.png" alt="Banana IT logo">
-              <img src="img/mercular/powerbuy_logo.png" alt="PowerBuy logo">
+              <a href="https://aliexpress.com/">
+                <img src="img/mercular/aliexpress_logo.png" alt="Alixexpress logo">
+              </a>
+              <a href="https://www.jib.co.th/">
+                <img src="img/mercular/jib_logo_2.png" alt="JIB logo">
+              </a>
+              <a href="https://bnn.in.th/">
+                <img src="img/mercular/bananait_logo.png" alt="Banana IT logo">
+              </a>
+              <a href="https://www.powerbuy.co.th/">
+                <img src="img/mercular/powerbuy_logo.png" alt="PowerBuy logo">
+              </a>
             </div>
           </div>
 
@@ -248,7 +256,7 @@
     <section class="content-container-v2">
       <h2>Reflection</h2>
       <h3>&nbsp;</h3>
-      <h3 class="hide">This was my first ever UX project and my first exposure to the UX industry. Apart from learning and experiencing UX workflow and principles, there are many takeaways I got from this internship:</h3>
+      <h3 class="hide">This was my first ever UX project and my first exposure to the UX industry. Apart from learning and experiencing UX workflow and principles, there were many takeaways I got from this internship:</h3>
       <h3>&nbsp;</h3>
       <h3 class="hide"><b>1. Design is not art:‍</b></h3>
       <h3>&nbsp;</h3>
