--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section class="case-studies">
       <h2 class="case-studies-title bold hide">Coding Projects</h2>
-      <a href="#" class="card-container hide">
+      <a href="/mindfulmates.html" class="card-container hide">
         <img src="img/beatbuddy_poster2.png" alt="BEatBuddy Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="beatbuddy-description">
