--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </a>
 
-      <a href="#" class="card-container hide">
+      <a href="/mindfulmates.html" class="card-container hide">
         <img src="img/mindfulmates_poster.png" alt="MindfulMates Case Study" class="image-poster">
         <h4 class="product-tag">Product Design</h4>
         <div class="description-container" id="mindfulmates-description">
@@ -80,8 +80,8 @@
 
     <section class="case-studies">
       <h2 class="case-studies-title bold hide">Coding Projects</h2>
-      <a href="/mindfulmates.html" class="card-container hide">
-        <img src="img/beatbuddy_poster2.png" alt="BEatBuddy Showcase" class="image-poster">
+      <a href="#" class="card-container hide">
+        <img src="img/beatbuddy_poster2.png" alt="BeatBuddy Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="beatbuddy-description">
           <h5 class="bold">BeatBuddy</h5>
