testing pretty urls

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="case-studies">
       <h2 class="case-studies-title bold hide">Case Studies</h2>
 
-      <a href="/ourdate.html" class="card-container hide">
+      <a href="/ourdate" class="card-container hide">
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
         <h4 class="ux-tag">UX/UI Design</h4>
         <div class="description-container" id="ourdate-description">
@@ -57,7 +57,7 @@
         </div>
       </a>
 
-      <a href="/mindfulmates.html" class="card-container hide">
+      <a href="/mindfulmates" class="card-container hide">
         <img src="img/mindfulmates_poster.png" alt="MindfulMates Case Study" class="image-poster">
         <h4 class="product-tag">Product Design</h4>
         <div class="description-container" id="mindfulmates-description">
@@ -67,7 +67,7 @@
       </a>
 
 
-      <a href="/mercular.html" class="card-container hide">
+      <a href="/mercular" class="card-container hide">
         <img src="img/mercular_poster.png" alt="Mercular Case Study" class="image-poster">
         <h4 class="ux-tag">UX Design</h4>
         <div class="description-container" id="mercular-description">
