added text color alternation

--- a/ourdate.html
+++ b/ourdate.html
@@ -61,6 +61,8 @@
         </div>
         <div class="desc hide">
           <h3>Online dating nowadays are so focused on the “swiping left and right” mentality. This in the long run can give users burnout from bad experiences like catfishing, ghosting, trust issues, and Pen Pal Syndrome*.</h3>
+          <h3>&nbsp;</h3>
+          <h5 class="hide-long">* A pen pal is a person on a dating app who messages you and messages you, but never meets up with you in person</h5>
         </div>
       </div>
       <div class="two-column section">
@@ -225,11 +227,11 @@
       </div>
     </section>
 
-    <div class="content-container-v2 blue-background">
+    <section class="content-container-v2 blue-background">
       <h3 class="hide-long">“Pu is a true professional who always goes above and beyond to update and improve his work. He has a keen eye for detail and takes the time to understand the needs and preferences of the end-users. Pu's commitment to continuous improvement is truly admirable, as he constantly seeks new ways to enhance the user experience and stay up-to-date with the latest design trends and technologies.”</h3>
       <h3>&nbsp;</h3>
       <h3 class="bold">Dora Lohas - CEO of Ourdate</h3>
-    </div>
+    </section>
     <h3>&nbsp;</h3>
 
     <footer>
