--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
     <div id="nav-placeholder"></div>
     <!-- & Put this in every page to populate navbar -->
 
-    <section class="intro-container hide-long">
+    <section class="intro-container">
       <div class="intro">
-        <h1 class="bold">Pu Thavikulwat</h1>
-        <h2 class="bold">Code-tailored Designer</h2>
-        <h3 class="intro-desc">Hi, I’m Pu. I am a UX designer with technical experience. I design solutions
+        <div class="name-container hide-long">
+          <span class="h1" id="txt-1"><b>P</b></span><span class="h1" id="txt-2"><b>u</b></span><span class="h1" id="txt-3"><b>&nbsp;</b></span><span class="h1" id="txt-4"><b>T</b></span><span class="h1" id="txt-5"><b>h</b></span><span class="h1" id="txt-6"><b>a</b></span><span class="h1" id="txt-7"><b>v</b></span><span class="h1" id="txt-8"><b>i</b></span><span class="h1" id="txt-9"><b>k</b></span><span class="h1" id="txt-10"><b>u</b></span><span class="h1" id="txt-11"><b>l</b></span><span class="h1" id="txt-12"><b>w</b></span><span class="h1" id="txt-13"><b>a</b></span><span class="h1" id="txt-14"><b>t</b></span>
+        </div>
+        <h2 class="hide-long"><b>Code-tailored Designer</b></h2>
+        <h3 class="intro-desc hide-long">Hi, I’m Pu. I am a UX designer with technical experience. I design solutions
           that are not only practical, but also give users meaningful experience, and
           form personal connections with them on a daily basis.</h3>
       </div>
@@ -52,7 +54,7 @@
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
         <h4 class="ux-tag">UX/UI Design</h4>
         <div class="description-container" id="ourdate-description">
-          <h5 class="bold">Ourdate</h5>
+          <h5><b>Ourdate</b></h5>
           <p>A new dating app that introduces a more natural and authentic way of dating • 2023</p>
         </div>
       </a>
