added beatbuddy page

--- a/ourdate.html
+++ b/ourdate.html
@@ -33,7 +33,7 @@
     <img src="img/ourdate/ourdate_poster_big.png" class="hide-long header-img" alt="Ourdate cover photo">
 
     <section class="content-container">
-      <div class="project-info">
+      <div class="project-info hide">
         <div class="timeline">
           <h2>Timeline</h2>
           <div class="detail">
