--- a/mercular.html
+++ b/mercular.html
@@ -33,7 +33,7 @@
     <img src="img/mercular/mercular_poster_big.png" class="hide-long header-img" alt="Mercular cover photo">
 
     <section class="content-container">
-      <div class="project-info">
+      <div class="project-info hide">
         <div class="timeline">
           <h2>Timeline</h2>
           <div class="detail">
