--- a/beatbuddy.html
+++ b/beatbuddy.html
@@ -63,6 +63,11 @@
       </ol>
     </section>
 
+    <section class="content-container">
+      <h2>Github Repository: </h2>
+      <h3>The repository can be found <a href="https://github.com/hmxxu/BeatBuddy">here</a>.</h3>
+    </section>
+
     <footer>
       <h4>Designed and Coded by Pu Thavikulwat</h4>
     </footer>
