--- a/markthai.html
+++ b/markthai.html
@@ -50,6 +50,11 @@
       <h3>The website can be found <a href="https://mark-home-made.onrender.com/">here</a>.</h3>
     </section>
 
+    <section class="content-container">
+      <h2>Github Repository: </h2>
+      <h3>The repository can be found <a href="https://github.com/fudgelgentle/mark-home-made">here</a>.</h3>
+    </section>
+
     <footer>
       <h4>Designed and Coded by Pu Thavikulwat</h4>
     </footer>
