--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </a>
 
-      <a href="#" class="card-container hide">
+      <a href="/markthai" class="card-container hide">
         <img src="img/markthai_poster.png" alt="Mark Thai Food Box Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="markthai-description">
