visual updates to beatbuddy and mark-thai

--- a/beatbuddy.html
+++ b/beatbuddy.html
@@ -30,11 +30,11 @@
     <div id="nav-placeholder"></div>
     <!-- & Put this in every page to populate navbar -->
 
-    <img src="img/beatbuddy/playlist.png" class="hide-long header-img" alt="BeatBuddy cover photo">
+    <img src="img/beatbuddy/playlist_2.png" class="hide-long header-img" alt="BeatBuddy cover photo">
 
     <section class="content-container">
       <h2>About BeatBuddy</h2>
-      <h3>BeatBuddy is a music app that tailors music recommendations closely to the user's preferences by analyzing specific attributes of a particular song like tempo, pitch, melody, etc.</h3>
+      <h3><a href="https://hmxxu.github.io/BeatBuddy/">BeatBuddy</a> is a music app that tailors music recommendations closely to the user's preferences by analyzing specific attributes of a particular song like tempo, pitch, melody, etc.</h3>
       <!-- <h3>Based on a song they selected, users are able to listen to a 30-second preview of the recommended songs on the app and save the whole playlist to their Spotify account.</h3> -->
     </section>
 
