investigating about.html animation

--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
 
     <div class="overlay"></div>
 
-    <!-- * Put this in every page to populate navbar -->
+    <!-- & Put this in every page to populate navbar -->
     <div id="nav-placeholder"></div>
-    <!-- * Put this in every page to populate navbar -->
+    <!-- & Put this in every page to populate navbar -->
 
     <section class="grid-container">
       <div class="picture">
@@ -48,7 +48,7 @@
       </div>
     </section>
 
-    <div class="background-wrapper">
+    <div class="background-wrapper hide">
       <div class="mobile-container">
         <div class="carousel-wrapper">
           <div class="carousel">
