--- a/beatbuddy.html
+++ b/beatbuddy.html
@@ -61,6 +61,7 @@
         <li>Pick a playlist mood.</li>
         <li>Enjoy! Your recommended playlist based on that song is now ready.</li>
       </ol>
+      <h3><b>Note:</b> If you are using Safari, you may need to click pause and play again to play the music!</h3>
     </section>
 
     <section class="content-container">
