added new pict to about

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       </div>
     </section>
 
-    <div class="background-wrapper hide">
+    <div class="background-wrapper">
       <div class="mobile-container">
         <div class="carousel-wrapper">
           <div class="carousel">
