--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<!-- ! This page doesn't interact with anything on this website.
+<!-- ! WARNING: This page doesn't interact with anything on this website.
 ! It's only here to store the original code for the navbar -->
 
 <header id="nav-menu">
@@ -29,7 +29,7 @@
       <ul>
         <li><a href="/">Case Studies</a></li>
         <li><a href="/">Coding</a></li>
-        <li><a href="/about.html">About Me</a></li>
+        <li><a href="/about">About Me</a></li>
       </ul>
     </nav>
   </div>
