updated cover photos

--- a/markthai.html
+++ b/markthai.html
@@ -40,7 +40,7 @@
 
     <section class="content-container">
       <h2>My Responsibilities</h2>
-      <h3>As the web designer and developer of the project, I designed and developed the <a href="https://mark-home-made.onrender.com/">website</a> using HTML, CSS, Javscript, and Node.js.</h3>
+      <h3>As the web designer and developer of the project, I designed and developed the <a href="https://mark-home-made.onrender.com/">website</a> using HTML/CSS, Javscript, and Node.js.</h3>
       <h3>The website has full eCommerce features, such as shopping cart, checkout, and payment.</h3>
 
     </section>
