--- a/beatbuddy.html
+++ b/beatbuddy.html
@@ -40,7 +40,7 @@
 
     <section class="content-container">
       <h2>My Responsibilities</h2>
-      <h3>I worked alongside 4 other team members to complete this project. As the <b>designer</b> and <b>front-end engineer</b> of the project, I was responsible for designing and developing the interface of the BeatBuddy website. I developed the front-end of the website using Typescript, Node.js, HTML, and CSS.</h3>
+      <h3>I worked alongside 4 other team members to complete this project. As the <b>designer</b> and <b>front-end engineer</b> of the project, I was responsible for designing and developing the interface of the BeatBuddy website. I developed the front-end of the website using Typescript, Node.js, and HTML/CSS.</h3>
 
     </section>
 
@@ -61,7 +61,7 @@
         <li>Pick a playlist mood.</li>
         <li>Enjoy! Your recommended playlist based on that song is now ready.</li>
       </ol>
-      <h3><b>Note:</b> If you are using Safari, you may need to click pause and play again to play the music!</h3>
+      <h3><b>Note:</b> If you are using Safari, you may need to click pause and play again to play the music for the first time!</h3>
     </section>
 
     <section class="content-container">
