--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <section class="case-studies">
-      <h2 class="case-studies-title bold hide">Case Studies</h2>
+      <h2 class="case-studies-title bold hide" id="case-stdy">Case Studies</h2>
 
       <a href="/ourdate" class="card-container hide">
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
@@ -81,7 +81,7 @@
     </section>
 
     <section class="case-studies">
-      <h2 class="case-studies-title bold hide">Coding Projects</h2>
+      <h2 class="case-studies-title bold hide" id="coding-projects">Coding Projects</h2>
       <a href="/beatbuddy" class="card-container hide">
         <img src="img/beatbuddy/playlist.png" alt="BeatBuddy Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
