--- a/markthai.html
+++ b/markthai.html
@@ -34,25 +34,25 @@
 
     <section class="content-container">
       <h2>About Mark Thai Food Box Website</h2>
-      <h3>Mark Thai Food Box is a Thai restaurant located in Seattle, WA. As part of my freelance work, my client (Mark Thai Food Box) wanted their own e-commerce website to advertise their business and sell their products online.</h3>
+      <h3 class="hide">Mark Thai Food Box is a Thai restaurant located in Seattle, WA. As part of my freelance work, my client (Mark Thai Food Box) wanted their own e-commerce website to advertise their business and sell their products online.</h3>
       <!-- <h3>Based on a song they selected, users are able to listen to a 30-second preview of the recommended songs on the app and save the whole playlist to their Spotify account.</h3> -->
     </section>
 
     <section class="content-container">
       <h2>My Responsibilities</h2>
-      <h3>As the web designer and developer of the project, I designed and developed the <a href="https://mark-home-made.onrender.com/">website</a> using HTML/CSS, Javscript, and Node.js.</h3>
-      <h3>The website has full eCommerce features, such as shopping cart, checkout, and payment.</h3>
+      <h3 class="hide">As the web designer and developer of the project, I designed and developed the <a href="https://mark-home-made.onrender.com/">website</a> using HTML/CSS, Javscript, and Node.js.</h3>
+      <h3 class="hide">The website has full eCommerce features, such as shopping cart, checkout, and payment.</h3>
 
     </section>
 
     <section class="content-container">
       <h2>How To Use: </h2>
-      <h3>The website can be found <a href="https://mark-home-made.onrender.com/">here</a>.</h3>
+      <h3 class="hide">The website can be found <a href="https://mark-home-made.onrender.com/">here</a>.</h3>
     </section>
 
     <section class="content-container">
       <h2>Github Repository: </h2>
-      <h3>The repository can be found <a href="https://github.com/fudgelgentle/mark-home-made">here</a>.</h3>
+      <h3 class="hide">The repository can be found <a href="https://github.com/fudgelgentle/mark-home-made">here</a>.</h3>
     </section>
 
     <footer>
