--- a/mindfulmates.html
+++ b/mindfulmates.html
@@ -60,7 +60,7 @@
           <h2>My Contribution</h2>
         </div>
         <div class="desc hide">
-          <h3>Ideation, User Research, Storyboarding, Prototyping, and Usability Testing</h3>
+          <h3>Ideation, User Research, Storyboarding, Prototyping, and Usability Testing.</h3>
         </div>
       </div>
       <div class="two-column section">
