--- a/beatbuddy.html
+++ b/beatbuddy.html
@@ -34,19 +34,19 @@
 
     <section class="content-container">
       <h2>About BeatBuddy</h2>
-      <h3><a href="https://hmxxu.github.io/BeatBuddy/">BeatBuddy</a> is a music app that tailors music recommendations closely to the user's preferences by analyzing specific attributes of a particular song like tempo, pitch, melody, etc.</h3>
+      <h3 class="hide"><a href="https://hmxxu.github.io/BeatBuddy/">BeatBuddy</a> is a music app that tailors music recommendations closely to the user's preferences by analyzing specific attributes of a particular song like tempo, pitch, melody, etc.</h3>
       <!-- <h3>Based on a song they selected, users are able to listen to a 30-second preview of the recommended songs on the app and save the whole playlist to their Spotify account.</h3> -->
     </section>
 
     <section class="content-container">
       <h2>My Responsibilities</h2>
-      <h3>I worked alongside 4 other team members to complete this project. As the <b>designer</b> and <b>front-end engineer</b> of the project, I was responsible for designing and developing the interface of the BeatBuddy website. I developed the front-end of the website using Typescript, Node.js, and HTML/CSS.</h3>
+      <h3 class="hide">I worked alongside 4 other team members to complete this project. As the <b>designer</b> and <b>front-end engineer</b> of the project, I was responsible for designing and developing the interface of the BeatBuddy website. I developed the front-end of the website using React.js, HTML/CSS, Typescript, and Node.js.</h3>
 
     </section>
 
     <section class="content-container">
       <h2>How To Use: </h2>
-      <ol>
+      <ol class="hide">
         <li>Go to <a href="https://hmxxu.github.io/BeatBuddy/">BeatBuddy</a> website.</li>
         <li>Click 'login for full access'.</li>
         <li>Use the following demo account to login:
@@ -61,12 +61,12 @@
         <li>Pick a playlist mood.</li>
         <li>Enjoy! Your recommended playlist based on that song is now ready.</li>
       </ol>
-      <h3><b>Note:</b> If you are using Safari, you may need to click pause and play again to play the music for the first time!</h3>
+      <h3 class="hide"><b>Note:</b> If you are using Safari, you may need to click pause and play again to play the music for the first time!</h3>
     </section>
 
     <section class="content-container">
       <h2>Github Repository: </h2>
-      <h3>The repository can be found <a href="https://github.com/hmxxu/BeatBuddy">here</a>.</h3>
+      <h3 class="hide">The repository can be found <a href="https://github.com/hmxxu/BeatBuddy">here</a>.</h3>
     </section>
 
     <footer>
