added missing text

--- a/mindfulmates.html
+++ b/mindfulmates.html
@@ -76,6 +76,8 @@
     <section class="content-container">
       <h2>Solution at a glance</h2>
       <h3>&nbsp;</h3>
+      <h3>MindfulMates is a pair of palm-sized robots that allow people in relationships to have an <b>easy and entertaining way</b> to communicate to each other how they are feeling even when they are not physically together.‍‍</h3>
+      <h3>&nbsp;</h3>
       <img class="hide" src="img/mindfulmates/checkin.png" alt="Mindfulmates check-in">
       <h3>&nbsp;</h3>
       <img class="hide" src="img/mindfulmates/take_time_off.png" alt="Mindfulmates take time off">
