added footer in about me page

--- a/about.html
+++ b/about.html
@@ -71,6 +71,10 @@
       </div>
     </div>
 
+    <footer>
+      <h4>Designed and Coded by Pu Thavikulwat</h4>
+    </footer>
+
   </body>
 
 </html>
