--- a/ourdate.html
+++ b/ourdate.html
@@ -212,7 +212,7 @@
                 <li>How much interaction does the average profile / hangout / GuruFox page receive?</li>
               </ul>
             </li>
-            <li>Visit duration
+            <li>Visit duration:
               <ul>
                 <li>How much time are users spending on the Ourdate app during a single visit?</li>
               </ul>
