updated beatbuddy page

--- a/beatbuddy.html
+++ b/beatbuddy.html
@@ -48,7 +48,7 @@
       <h2>How To Use: </h2>
       <ol class="hide">
         <li>Go to <a href="https://hmxxu.github.io/BeatBuddy/">BeatBuddy</a> website.</li>
-        <li>Click 'login for full access'.</li>
+        <li>Click 'login for full access' and login with your Spotify account.</li>
         <li>Search and select a song you like.</li>
         <li>Pick a playlist mood.</li>
         <li>Enjoy! Your recommended playlist based on that song is now ready.</li>
