--- a/mercular.html
+++ b/mercular.html
@@ -24,6 +24,15 @@
     <!-- & Put this in every page to populate navbar -->
     <link rel="icon" type="image/png" href="img/favicon_pu.png">
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ML1WFK5FFS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ML1WFK5FFS');
+  </script>
   <body>
 
     <!-- & Put this in every page to populate navbar -->
@@ -250,7 +259,7 @@
     <section class="content-container-v2">
       <h2>Outcome</h2>
       <h3>&nbsp;</h3>
-      <h3 class="hide">The wishlist feature was launched in Q1 2023 and the website saw a<b>4% increase in customer retention rate.</b></h3>
+      <h3 class="hide">The wishlist feature was launched in Q1 2023 and the website saw a<b> 4% increase in customer retention rate.</b></h3>
     </section>
 
     <section class="content-container-v2">
