--- a/mindfulmates.html
+++ b/mindfulmates.html
@@ -24,6 +24,15 @@
     <!-- & Put this in every page to populate navbar -->
     <link rel="icon" type="image/png" href="img/favicon_pu.png">
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ML1WFK5FFS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ML1WFK5FFS');
+  </script>
   <body>
 
     <!-- & Put this in every page to populate navbar -->
