finished editing mark thai page

--- a/markthai.html
+++ b/markthai.html
@@ -43,7 +43,7 @@
 
     <section class="content-container">
       <h2>About Mark Thai Food Box Website</h2>
-      <h3 class="hide">Mark Thai Food Box is a Thai restaurant located in Seattle, WA. The restaurant wanted a re-design of their own e-commerce website to advertise their business and sell their products online.</h3>
+      <h3 class="hide"><a href="https://mark-home-made.onrender.com/">Mark Thai Food Box</a> is a Thai restaurant located in Seattle, WA. The restaurant wanted a re-design of their own e-commerce website to advertise their business and sell their products online.</h3>
       <!-- <h3>Based on a song they selected, users are able to listen to a 30-second preview of the recommended songs on the app and save the whole playlist to their Spotify account.</h3> -->
     </section>
 
@@ -55,8 +55,27 @@
     </section>
 
     <section class="content-container">
-      <h2>How To Use: </h2>
-      <h3 class="hide">The website can be found <a href="https://mark-home-made.onrender.com/">here</a>.</h3>
+      <h2>Outcome: </h2>
+      <h3 class="hide">The new website resulted in a 30% increase in mobile traffic and 45% increase in customer satisfaction.</h3>
+      <div class="before-after-container">
+        <h3 class="hide before-after-text"><b>Home page</b></h3>
+        <img src="img/markthai/before-after-1.png" class="hide-long" alt="Before and After of Home page">
+      </div>
+
+      <div class="before-after-container">
+        <h3 class="hide before-after-text"><b>Shop page</b></h3>
+        <img src="img/markthai/before-after-2.png" class="hide-long" alt="Before and After of Shop page">
+      </div>
+
+      <div class="before-after-container">
+        <h3 class="hide before-after-text"><b>Menu page</b></h3>
+        <img src="img/markthai/before-after-3.png" class="hide-long" alt="Before and After of Menu page">
+      </div>
+
+      <div class="before-after-container">
+        <h3 class="hide before-after-text"><b>Shopping cart page</b></h3>
+        <img src="img/markthai/before-after-4.png" class="hide-long" alt="Before and After of Shopping cart page">
+      </div>
     </section>
 
     <footer>
