--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <a href="/living-sustainability" class="card-container hide">
         <img src="img/living_poster.png" alt="Living Sustainability Case Study" class="image-poster">
-        <h4 class="coding-tag">Design + Development</h4>
+        <h4 class="coding-tag">UX/UI Design + Coding</h4>
         <div class="description-container" id="living-description">
           <h5><b>Living Sustainability</b></h5>
           <p>Visualizing the carbon footprints in your daily life • 2025</p>
