--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ourdate | Pu Thavikulwat</title>
+    <title>Living Sustainability | Pu Thavikulwat</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -86,7 +86,7 @@
           <div class="research-section br-12 pd-24 hide-long">
             <span class="r-title">Living Sustainability: Creating Interactive Environmental Impact Visualizations by Augmenting Static Web Pages</span>
             <span class="r-description">Zhihan Zhang, <b>Pu Thavikulwat</b>, Alexander Le Metzger, Yuxuan Mei, Felix Hähnlein, Zachary Englhardt, Tingyu Cheng, Shwetak Patel, Adriana Schulz, Vikram Iyer</span>
-            <span class="r-status"><b>Under Submission (IMWUT '25)</b></span>
+            <span class="r-status"><b>-- Under Submission (IMWUT '25) --</b></span>
             <img src="/img/external_link.svg" alt="External link to research paper" id="research-link-icon">
           </div>
         </div>
