--- a/index.html
+++ b/index.html
@@ -60,15 +60,6 @@
     <section class="case-studies">
       <h2 class="case-studies-title bold hide" id="case-stdy">Case Studies</h2>
 
-      <a href="/living-sustainability" class="card-container hide">
-        <img src="img/living_poster.png" alt="Living Sustainability Case Study" class="image-poster">
-        <h4 class="coding-tag">UX/UI Design + Coding</h4>
-        <div class="description-container" id="living-description">
-          <h5><b>Living Sustainability</b></h5>
-          <p>Visualizing the carbon footprints in your daily life • 2025</p>
-        </div>
-      </a>
-
       <a href="/ourdate" class="card-container hide">
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
         <h4 class="ux-tag">UX/UI Design</h4>
@@ -101,6 +92,16 @@
 
     <section class="case-studies">
       <h2 class="case-studies-title bold hide" id="coding-projects">Coding Projects</h2>
+
+      <a href="/living-sustainability" class="card-container hide">
+        <img src="img/living_poster.png" alt="Living Sustainability Case Study" class="image-poster">
+        <h4 class="coding-tag">Coding</h4>
+        <div class="description-container" id="living-description">
+          <h5><b>Living Sustainability</b></h5>
+          <p>Visualizing the carbon footprints in your daily life • 2025</p>
+        </div>
+      </a>
+
       <a href="/beatbuddy" class="card-container hide">
         <img src="img/beatbuddy/playlist.png" alt="BeatBuddy Showcase" class="image-poster">
         <h4 class="coding-tag">Coding</h4>
