--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -405,18 +405,20 @@
             <h2>Final Product</h2>
           </div>
         </div>
-        <p class="hide mb-16">The extension can be downloaded here:</p>
-        <a class="hide chrome-web br-12" href="https://chromewebstore.google.com/detail/living-sustainability/fgdcifpcoknldfmpegnjoomeafgfefkf?authuser=0&hl=en">
-          <div class="flex-center cg-12">
-            <img src="img/chrome_web_store.svg" alt="Icon of chrome web store" class="icon-16">
-            <p class="lexend-reg">Click to access the extension</p>
-          </div>
-        </a>
-        <p class="hide mb-16 mt-32">Below are videos showing the full functionality of the Living Sustainability extension:</p>
-        <p class="hide lexend-reg">Highlight mode: </p>
-        <iframe src="https://www.youtube.com/embed/I1A1hQawbW0?si=EkIsfMhKEhYK2jAk?autoplay=1" allow="autoplay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p class="hide lexend-reg">Auto-detect mode: </p>
-        <iframe src="https://www.youtube.com/embed/OYngQEFzhJc?si=dMZTzmkcJSbhpO4D?autoplay=1" allow="autoplay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="publication-container">
+          <p class="hide mb-16">The extension can be downloaded here:</p>
+          <a class="hide chrome-web br-12" href="https://chromewebstore.google.com/detail/living-sustainability/fgdcifpcoknldfmpegnjoomeafgfefkf?authuser=0&hl=en">
+            <div class="flex-center cg-12">
+              <img src="img/chrome_web_store.svg" alt="Icon of chrome web store" class="icon-16">
+              <p class="lexend-reg">Click to access the extension</p>
+            </div>
+          </a>
+          <p class="hide mb-16 mt-32">Below are videos showing the full functionality of the Living Sustainability extension:</p>
+          <p class="hide lexend-reg">Highlight mode: </p>
+          <iframe src="https://www.youtube.com/embed/I1A1hQawbW0?si=EkIsfMhKEhYK2jAk?autoplay=1" allow="autoplay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <p class="hide lexend-reg">Auto-detect mode: </p>
+          <iframe src="https://www.youtube.com/embed/OYngQEFzhJc?si=dMZTzmkcJSbhpO4D?autoplay=1" allow="autoplay" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
       </div>
 
     </section>
