--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -410,7 +410,7 @@
           <a class="hide chrome-web br-12" href="https://chromewebstore.google.com/detail/living-sustainability/fgdcifpcoknldfmpegnjoomeafgfefkf?authuser=0&hl=en">
             <div class="flex-center cg-12">
               <img src="img/chrome_web_store.svg" alt="Icon of chrome web store" class="icon-16">
-              <p class="lexend-reg">Click to access the extension</p>
+              <p class="lexend-reg">Click here to access the extension</p>
             </div>
           </a>
           <p class="hide mb-16 mt-32">Below are videos showing the full functionality of the Living Sustainability extension:</p>
