changed research paper title

--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -84,7 +84,7 @@
         <div class="desc hide">
           <p>This project is an HCI research paper I completed with Zhihan Zhang, a third year Ph.D. student at Paul G. Allen School of Computer Science & Engineering:</p>
           <div class="research-section br-12 pd-24 hide-long">
-            <span class="r-title">Living Sustainability: Creating Interactive Environmental Impact Visualizations by Augmenting Static Web Pages</span>
+            <span class="r-title">Living Sustainability: In-Context Interactive Environmental Impact Communication</span>
             <span class="r-description">Zhihan Zhang, <b>Pu Thavikulwat</b>, Alexander Le Metzger, Yuxuan Mei, Felix Hähnlein, Zachary Englhardt, Tingyu Cheng, Shwetak Patel, Adriana Schulz, Vikram Iyer</span>
             <span class="r-status"><b>-- Under Submission (IMWUT '25) --</b></span>
             <img src="/img/external_link.svg" alt="External link to research paper" id="research-link-icon">
