--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- <h3 class="intro-desc">Hi, I’m Pu. I am a UX designer with technical experience. I design solutions
           that are not only practical, but also give users meaningful experience, and
           form personal connections with them on a daily basis.</h3> -->
-        <h3 class="intro-desc">Hi, I'm Pu. I'm a designer with a technical background, specializing in e-commerce and community-engagement platforms. I focus on crafting solutions that are both practical and meaningful, forming personal connections with users on a daily basis.</h3>
+        <h3 class="intro-desc">Hi, I'm Pu. I'm a developer with a design background, specializing in e-commerce and community-engagement platforms. I focus on crafting solutions that are both practical and meaningful, forming personal connections with users on a daily basis.</h3>
       </div>
     </section>
 
