updated title to design projects

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <section class="case-studies">
-      <h2 class="case-studies-title bold hide" id="case-stdy">Case Studies</h2>
+      <h2 class="case-studies-title bold hide" id="case-stdy">Design Projects</h2>
 
       <a href="/ourdate" class="card-container hide">
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
