--- a/navbar.html
+++ b/navbar.html
@@ -10,7 +10,7 @@
 
     <ul class="nav-links">
       <div class="menu">
-        <li><a href="/">Case Studies</a></li>
+        <li><a href="/">Design</a></li>
         <li><a href="/">Coding</a></li>
         <li><a href="/">About Me</a></li>
       </div>
