--- a/navbar.html
+++ b/navbar.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar-mobile">
       <ul>
-        <li><a href="/">Case Studies</a></li>
+        <li><a href="/">Design</a></li>
         <li><a href="/">Coding</a></li>
         <li><a href="/about">About Me</a></li>
       </ul>
