--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
       </div>
       <div class="about-me hide-long">
         <h1 class="bold">About Me</h1>
-        <h4>Hi, I’m Pu! Currently studying Computer Science at University of Washington. I grew up in Bangkok, Thailand and have lived there for 18 years. Currently, I am living in Seattle, WA.</h4>
-        <h4>I decided to make a switch from Software Engineering to UX Design after my first UX Design internship. While I enjoy programming and its technical aspect, I have always been a visual person who likes everyday design. UX Design, for me, gives me a way to solve problems and give people meaningful experiences through incorporating both technical work and visual creativity.</h4>
-        <h4>Outside of work, I enjoy traveling to different parts of the world 🛩️, playing video games 🎮, and watching anime.</h4>
+        <h4>Hi, I'm Pu! I'm a full-stack developer with a focus on frontend engineering and UX/UI design. I recently graduated with a degree in Computer Science from the University of Washington, and I've spent the past year building AI-based web applications that help promote sustainable lifestyle.</h4>
+        <h4>Originally from Bangkok, Thailand, I've been living in Seattle for the past few years. During that time, I've worked on projects ranging from research tools to production-ready e-commerce platforms with secure payments and responsive UIs. I enjoy working on tools that are both practical and intuitive.</h4>
+        <h4>Outside of work, I love exploring new places ✈️, playing games 🎮, and watching anime. I'm currently looking for full-time opportunities where I can contribute as a full-stack or frontend developer and grow with a mission-driven team.</h4>
       </div>
     </section>
 
@@ -74,9 +74,9 @@
           </div>
         </div>
         <h1 class="bold">About Me</h1>
-        <h4>Hi, I’m Pu! Currently studying Computer Science at University of Washington. I grew up in Bangkok, Thailand and have lived there for 18 years. Currently, I am living in Seattle, WA.</h4>
-        <h4>I decided to make a switch from Software Engineering to UX Design after my first UX Design internship. While I enjoy programming and its technical aspect, I have always been a visual person who likes everyday design. UX Design, for me, gives me a way to solve problems and give people meaningful experiences through incorporating both technical work and visual creativity.</h4>
-        <h4>Outside of work, I enjoy traveling to different parts of the world 🛩️, playing video games 🎮, and watching anime.</h4>
+        <h4>Hi, I'm Pu! I'm a full-stack developer with a focus on frontend engineering and UX/UI design. I recently graduated with a degree in Computer Science from the University of Washington, and I've spent the past year building AI-based web applications that help promote sustainable lifestyle.</h4>
+        <h4>Originally from Bangkok, Thailand, I've been living in Seattle for the past few years. During that time, I've worked on projects ranging from research tools to production-ready e-commerce platforms with secure payments and responsive UIs. I enjoy working on tools that are both practical and intuitive.</h4>
+        <h4>Outside of work, I love exploring new places ✈️, playing games 🎮, and watching anime. I'm currently looking for full-time opportunities where I can contribute as a full-stack or frontend developer and grow with a mission-driven team.</h4>
       </div>
     </div>
 
