--- a/index.html
+++ b/index.html
@@ -49,12 +49,43 @@
         <div class="name-container">
           <span class="h1" id="txt-1"><b>P</b></span><span class="h1" id="txt-2"><b>u</b></span><span class="h1" id="txt-3"><b>&nbsp;</b></span><span class="h1" id="txt-4"><b>T</b></span><span class="h1" id="txt-5"><b>h</b></span><span class="h1" id="txt-6"><b>a</b></span><span class="h1" id="txt-7"><b>v</b></span><span class="h1" id="txt-8"><b>i</b></span><span class="h1" id="txt-9"><b>k</b></span><span class="h1" id="txt-10"><b>u</b></span><span class="h1" id="txt-11"><b>l</b></span><span class="h1" id="txt-12"><b>w</b></span><span class="h1" id="txt-13"><b>a</b></span><span class="h1" id="txt-14"><b>t</b></span>
         </div>
-        <h2 class="hide-long"><b>Designer & Developer</b></h2>
+        <h2 class="hide-long"><b>Developer & Designer</b></h2>
         <!-- <h3 class="intro-desc">Hi, I’m Pu. I am a UX designer with technical experience. I design solutions
           that are not only practical, but also give users meaningful experience, and
           form personal connections with them on a daily basis.</h3> -->
         <h3 class="intro-desc">Hi, I'm Pu. I'm a developer with a design background, specializing in e-commerce and community-engagement platforms. I focus on crafting solutions that are both practical and meaningful, forming personal connections with users on a daily basis.</h3>
       </div>
+    </section>
+
+    <section class="case-studies">
+      <h2 class="case-studies-title bold hide" id="coding-projects">Coding Projects</h2>
+
+      <a href="/living-sustainability" class="card-container hide">
+        <img src="img/living_poster.png" alt="Living Sustainability Case Study" class="image-poster">
+        <h4 class="coding-tag">Coding</h4>
+        <div class="description-container" id="living-description">
+          <h5><b>Living Sustainability</b></h5>
+          <p>Visualizing the carbon footprints in your daily life • 2025</p>
+        </div>
+      </a>
+
+      <a href="/beatbuddy" class="card-container hide">
+        <img src="img/beatbuddy/playlist.png" alt="BeatBuddy Showcase" class="image-poster">
+        <h4 class="coding-tag">Coding</h4>
+        <div class="description-container" id="beatbuddy-description">
+          <h5 class="bold">BeatBuddy</h5>
+          <p>A website that crafts you personalized playlists based on your music taste • 2023</p>
+        </div>
+      </a>
+
+      <a href="/markthai" class="card-container hide">
+        <img src="img/markthai_poster.png" alt="Mark Thai Food Box Showcase" class="image-poster">
+        <h4 class="coding-tag">Coding</h4>
+        <div class="description-container" id="markthai-description">
+          <h5 class="bold">Mark Thai Food Box</h5>
+          <p>An e-commerce site for a Thai restaurant in Seattle, WA • 2022</p>
+        </div>
+      </a>
     </section>
 
     <section class="case-studies">
@@ -88,37 +119,6 @@
         </div>
       </a>
 
-    </section>
-
-    <section class="case-studies">
-      <h2 class="case-studies-title bold hide" id="coding-projects">Coding Projects</h2>
-
-      <a href="/living-sustainability" class="card-container hide">
-        <img src="img/living_poster.png" alt="Living Sustainability Case Study" class="image-poster">
-        <h4 class="coding-tag">Coding</h4>
-        <div class="description-container" id="living-description">
-          <h5><b>Living Sustainability</b></h5>
-          <p>Visualizing the carbon footprints in your daily life • 2025</p>
-        </div>
-      </a>
-
-      <a href="/beatbuddy" class="card-container hide">
-        <img src="img/beatbuddy/playlist.png" alt="BeatBuddy Showcase" class="image-poster">
-        <h4 class="coding-tag">Coding</h4>
-        <div class="description-container" id="beatbuddy-description">
-          <h5 class="bold">BeatBuddy</h5>
-          <p>A website that crafts you personalized playlists based on your music taste • 2023</p>
-        </div>
-      </a>
-
-      <a href="/markthai" class="card-container hide">
-        <img src="img/markthai_poster.png" alt="Mark Thai Food Box Showcase" class="image-poster">
-        <h4 class="coding-tag">Coding</h4>
-        <div class="description-container" id="markthai-description">
-          <h5 class="bold">Mark Thai Food Box</h5>
-          <p>An e-commerce site for a Thai restaurant in Seattle, WA • 2022</p>
-        </div>
-      </a>
     </section>
 
     <footer>
