updated tech stacks

--- a/living-sustainability.html
+++ b/living-sustainability.html
@@ -73,7 +73,7 @@
         <div class="tools">
           <h2>Tools</h2>
           <div class="detail lexend-light">
-            <p>Figma, HTML, CSS, Javascript, Chart.js, Node.js, MongoDB, Slack</h3>
+            <p>Figma, HTML, CSS, Javascript, React.js, Chart.js, Node.js, MongoDB, Slack</h3>
           </div>
         </div>
       </div>
